master/app/assets/stylesheets/data_set.css.scss
// Place all the styles related to the data_set controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

span.alert {
  color:red;
  font-weight:bold;
}
blockquote {
  color:grey;
  font-style: italic;
}

td:hover {
  /* background:#ffffff;*/ 
  text-decoration:none;
}
td.data_set_header {
  color:gray;
  font-size:smaller;
}

td.check_box, th.check_box {
  text-align: center;
}


#loading{
    border:1px dashed #999;
    padding:15px;
    position: fixed;
    top:50%;
    left:50%;
    background-color:#FFF;
    filter: alpha(opacity=85);
    -moz-opacity:0.85;
    opacity:0.85;
}

#loading .loadingMsg{
    text-align:center;
    padding-top:100px;
    width:100px;
    background-image:url("/assets/loading.gif");
    background-position: center top;
    background-repeat: no-repeat;
}

.button_to{
  position: relative; 
  display: inline;
}

/*!
Pure v0.6.2
Copyright 2013 Yahoo!
Licensed under the BSD License.
https://github.com/yahoo/pure/blob/master/LICENSE.md
*/
.pure-table {
    /* Remove spacing between table cells (from Normalize.css) */
    border-collapse: collapse;
    border-spacing: 0;
    empty-cells: show;
    border: 1px solid #cbcbcb;
}

.pure-table caption {
    color: #000;
    font: italic 85%/1 arial, sans-serif;
    padding: 1em 0;
    text-align: center;
}

.pure-table td,
.pure-table th {
    border-left: 1px solid #cbcbcb;/*  inner column border */
    border-width: 0 0 0 1px;
    font-size: inherit;
    margin: 0;
    overflow: visible; /*to make ths where the title is really long work*/
    padding: 0.5em 1em; /* cell padding */
}

/* Consider removing this next declaration block, as it causes problems when
there's a rowspan on the first cell. Case added to the tests. issue#432 */
.pure-table td:first-child,
.pure-table th:first-child {
    border-left-width: 0;
}

.pure-table thead {
    background-color: #94C0C9;
    color: #000;
    text-align: left;
    vertical-align: bottom;
}

/*
striping:
   even - #fff (white)
   odd  - #f2f2f2 (light gray)
*/
.pure-table td {
    background-color: transparent;
}
.pure-table-odd td {
    background-color: #f2f2f2;
}

/* nth-child selector for modern browsers */
.pure-table-striped tr:nth-child(2n-1) td {
    background-color: #f2f2f2;
}

/* BORDERED TABLES */
.pure-table-bordered td {
    border-bottom: 1px solid #cbcbcb;
}
.pure-table-bordered tbody > tr:last-child > td {
    border-bottom-width: 0;
}


/* HORIZONTAL BORDERED TABLES */

.pure-table-horizontal td,
.pure-table-horizontal th {
    border-width: 0 0 1px 0;
    border-bottom: 1px solid #cbcbcb;
}
.pure-table-horizontal tbody > tr:last-child > td {
    border-bottom-width: 0;
}

.arrow-up:after {
    content: "\25B2";
}
.arrow-up:after:hover {
    content: "\25B2";
    color: #000000;
}
.arrow-down:after {
    content: "\25BC";
}
.arrow-down:after:hover {
    content: "\25BC";
    color: #000000;
}

button.btn-link {
    background:none;
    border:none;
    color: #94C0C9;
    text-decoration: underline;
}

